--- a/package.json
+++ b/package.json
@@ -2,18 +2,21 @@
   "name": "js-calculator",
   "version": "1.0.0",
   "description": "",
-  "main": "main.js",
+  "main": "index.js",
   "scripts": {
-    "build:css": "npx tailwind build -i src/main.css -o dist/tailwind.css --watch"
+    "build:css": "npx tailwind build -i ./src/main.css -o ./dist/tailwind.css"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Abdullah-coder2013/JsCalc.git"
   },
   "author": "",
-  "license": "MIT",
+  "license": "ISC",
   "bugs": {
     "url": "https://github.com/Abdullah-coder2013/JsCalc/issues"
   },
-  "homepage": "https://github.com/Abdullah-coder2013/JsCalc#readme"
+  "homepage": "https://github.com/Abdullah-coder2013/JsCalc#readme",
+  "devDependencies": {
+    "tailwindcss": "^3.1.8"
+  }
 }
