--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build:css": "npx tailwind build -i ./src/main.css -o ./dist/tailwind.css"
+    "build:css": "npx tailwind build -i ./src/main.css -o ./dist/tailwind.css --watch"
   },
   "repository": {
     "type": "git",
